[package]
name = "esp-hello-display"
version = "0.1.0"
authors = ["Kirill Mikhailov <playfulfence@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"


[target.xtensa-esp32-none-elf.dependencies]
xtensa-atomic-emulation-trap = "0.3.1"
esp32-hal = { version = "0.10.0", optional = true, features = [ "rt" ] }
esp-backtrace = { git = "https://github.com/esp-rs/esp-backtrace", features = [
    "esp32",
    "panic-handler",
    "print-uart",
] }
xtensa-lx-rt = { version = "0.14.0", features = ["esp32"], optional = true }
esp-println = { version = "0.3.1", features = [ "esp32" ] }
# esp-wifi = { version = "0.1.0", git = "https://github.com/esp-rs/esp-wifi", package = "esp-wifi", features = ["esp32","esp32-async", "esp-now"]}

[target.xtensa-esp32s2-none-elf.dependencies]
# esp-wifi = { version = "0.1.0", git = "https://github.com/esp-rs/esp-wifi", package = "esp-wifi", features = ["esp32s2","esp32s2-async", "esp-now"]}
xtensa-atomic-emulation-trap = "0.3.1"
esp32s2-hal = { version = "0.7.0", optional = true, features = [ "rt" ] }
esp-backtrace = { git = "https://github.com/esp-rs/esp-backtrace", features = [
    "esp32s2",
    "panic-handler",
    "print-uart",
] }
xtensa-lx-rt = { version = "0.14.0", features = ["esp32s2"], optional = true }
esp-println = { version = "0.3.1", features = [ "esp32s2" ] }

[target.xtensa-esp32s3-none-elf.dependencies]
# esp-wifi = {git = "https://github.com/esp-rs/esp-wifi", package = "esp-wifi", features = ["esp32s3","esp32s3-async", "esp-now"]}
xtensa-atomic-emulation-trap = "0.3.1"
esp32s3-hal = { version = "0.7.0", optional = true, features = [ "rt" ] }
esp-backtrace = { git = "https://github.com/esp-rs/esp-backtrace", features = [
    "esp32s3",
    "panic-handler",
    "print-uart",
] }
xtensa-lx-rt = { version = "0.14.0", features = ["esp32s3"], optional = true }
esp-println = { version = "0.3.1", features = [ "esp32s3" ] }

[target.riscv32imc-unknown-none-elf.dependencies]
esp32c3-hal = { version = "0.7.0", optional = true }
# esp-wifi = {git = "https://github.com/esp-rs/esp-wifi", package = "esp-wifi", features = ["esp32c3","esp32c3-async", "esp-now"]}
esp-backtrace = { git = "https://github.com/esp-rs/esp-backtrace", version = "0.6.0", features = [
    "esp32c3",
    "panic-handler",
    "print-uart",
] }
esp-println = { version = "0.4.0", features = [ "esp32c3" ] }


[dependencies]
mipidsi = { git = "https://github.com/almindor/mipidsi" }
st7789 = "0.7.0"
profont = "0.6.1"
embedded-hal = "0.2.7"
embedded-graphics = "0.7.1"
embedded-graphics-core = "0.3.3"
display-interface = "0.4.1"
display-interface-spi = "0.4.1"
libm = "0.2.6"

[features]
default = [ "rt", "eh1", "ili9341"]
rt = [ ]
# eh1 = ["esp32-hal/eh1", "esp32"]
# eh1 = ["esp32s2-hal/eh1", "esp32s2"]
# eh1 = ["esp32s3-hal/eh1", "esp32s3"]
eh1 = ["esp32c3-hal/eh1", "esp32c3"]

esp32 = []
esp32s2 = []
esp32s3 = []
esp32c3 = []
ili9341 = []